[package]
name = "mpcr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = "0.9.5"
num-prime = "0.4.2"
rand = "0.8.5"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
[dependencies.num]
version = "0.4.0"
features = ["rand"]

[dev-dependencies]
