[package]
name = "axum-sqlx"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.11", features = ["http2", "macros", "headers"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "mysql", "time", "macros", "offline"] }
time = { version = "0.3.20", features = ["formatting", "parsing", "serde", "macros"] }
tokio = { version = "1.26.0", features = ["full"] }
