[package]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[dependencies]
prost = "0.11.5"
tokio = {version="1.23.0", features=["rt-multi-thread"]}
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
