[package]
name = "mpc"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uint = "0.9.5"
num-prime = "0.4.2"
rand = "0.8.5"
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-modular = { version = "0.5.1", features = ["num-bigint"] }
num-traits = "0.2.15"
rsa = "0.8.2"
